Fix about section title spacing in desktop

--- a/src/components/About/styles/styles.css
+++ b/src/components/About/styles/styles.css
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   justify-content: space-evenly;
+  margin: 0 auto;
 }
 
 .bracket {
